Stopped titles from getting squished into navbar on mobile

--- a/styles/components/NavBar.module.css
+++ b/styles/components/NavBar.module.css
@@ -4,6 +4,18 @@
   top: 10px;
 }
 
+@media only screen and (min-width: 768px) {
+  .navbar {
+    margin-bottom: -55px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    margin-bottom: 65px;
+  }
+}
+
 /*Navbar socials*/
 
 .navbarSocials {
